# SpotifyWallPaper

./: .gitignore  AGENTS.md  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.base.json
.github/workflows/: ci.yml  spotify-auth-pages.yml
apps/configurator/: index.html  package.json  vite.config.ts
apps/configurator/src/: App.svelte  main.ts  settingsModel.test.ts  settingsModel.ts  tauriCommands.test.ts  tauriCommands.ts
apps/configurator/src-tauri/: Cargo.toml  tauri.conf.json
apps/configurator/src-tauri/src/: main.rs
apps/spotify-auth/: index.html  package.json  prepare-pages.mjs  tsconfig.json  vite.config.ts
apps/spotify-auth/src/: auth.test.ts  auth.ts  main.ts  style.css
apps/wallpaper/: index.html  package.json  tsconfig.json  vite.config.ts
apps/wallpaper/public/: project.json
apps/wallpaper/src/: App.svelte  app.css
apps/wallpaper/src/layout/: presets.ts  (+3 more)
crates/config-schema/: Cargo.toml
crates/config-schema/src/: lib.rs
crates/visual-core/: Cargo.toml
crates/visual-core/src/: animation.rs  layout.rs  lib.rs  lrc.rs  theme.rs  visualizer.rs  wasm.rs
docs/: README.md  post-v0.0.1-stabilization.md  qa-checklist.md  release-notes-v0.0.1.md  user-guide.md
docs/phase-report/: final-implementation-report.md
docs/phase-reports/: phase-10-tauri-configurator.md  phase-11-rainmeter.md  phase-12-final-qa-docs.md  phase-7-lyrics.md  phase-8-transitions.md  phase-9-player-clock.md  post-v0.0.1-stabilization.md  rc-2-wallpaper-engine-property-types.md
examples/settings/: lyrics-focus.json  minimal.json  rainmeter-hybrid.json
(+60 files in other folders)
