[package]
name = "spotify-wallpaper-configurator"
version = "0.0.0"
description = "Optional configurator for Spotify Wallpaper settings"
edition = "2021"

[workspace]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
tauri = { version = "2.11.2", features = [] }
